MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

dist_libexec_SCRIPTS = dsc-grapher.pl \
    dsc-grapher-cli.pl

dist_sysconf_DATA = dsc-grapher.cfg.sample

htmldir = $(datadir)/html
dist_html_DATA = plot.page \
    icons/1downarrow.png \
    icons/1leftarrow.png \
    icons/1rightarrow.png \
    icons/1uparrow.png \
    icons/2downarrow.png \
    icons/2leftarrow.png \
    icons/2rightarrow.png \
    icons/2uparrow.png

EXTRA_DIST = update-dat-file-locations.sh
